# rfm-clustering-mall

./: .gitignore  pyproject.toml
notebooks/: crisp-1.ipynb
